--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@nuxt/icon": "1.13.0",
     "@nuxt/ui": "3.1.2",
     "@primeuix/themes": "^1.1.1",
+    "drizzle-orm": "^0.43.1",
     "nuxt": "^3.17.3",
+    "pg": "^8.16.0",
+    "postgres": "^3.4.5",
     "primevue": "^4.3.4",
     "typescript": "^5.6.3",
     "vue": "^3.5.13",
@@ -21,6 +24,7 @@
   },
   "packageManager": "pnpm@10.6.2+sha512.47870716bea1572b53df34ad8647b42962bc790ce2bf4562ba0f643237d7302a3d6a8ecef9e4bdfc01d23af1969aa90485d4cebb0b9638fa5ef1daef656f6c1b",
   "devDependencies": {
-    "@primevue/nuxt-module": "^4.3.4"
+    "@primevue/nuxt-module": "^4.3.4",
+    "drizzle-kit": "^0.31.1"
   }
 }
